# eTAMP

./: .gitignore  .gitmodules  README.md  instantiated_actions.pk  output.sas  requirements.txt  tree_nodes.pk
BO/: FindFesibleRegion.py  FindFesibleRegion1Binary.py  FindFesibleRegionSkeleton1Full.py  README.md  bo_one_piece.py  bo_one_piece0.py  data0.pk  debugDataset.pk  debugDataset1.pk  debugDataset2.pk  demo.py  fit_suggestion.py  fit_suggestion_multi.py  fit_suggestion_prod.py  fit_suggestion_test.py  list_bo_input_output.pk  random_decisions.py  read_data.py  try.py  tryGenericAlg.py
Darias/TASK_regrasp/: CP_data_from_desk_deskP.pk  build_scenario.py  collectData_BO.py  ctype_to_constraints_p1_p4_p3.pk  debugDataset.pk  exe_plan.pk  instantiated_actions.pk  list_visits_seq.csv  replay.py  runExp_CP-BO-Transfer.py  runExp_CP-BO.py  runExp_eTAMP.py  runExp_eTAMP_regrasp.py  run_branch_regrasp.py  run_eTAMP.py  run_eTAMP_block.py  tree_nodes.pk
Darias/TASK_unpack/: build_scenario.py  exe_plan.pk  instantiated_actions.pk  replay.py  result_vnts.csv  result_vnts_unpack3.csv  run_branch.py  run_eTAMP.py  run_eTAMP_block.py  run_eTAMP_block0.py  tree_nodes.pk
Darias/scenario_description/: boxA.urdf  boxA_thin.urdf  boxB.urdf  boxC.urdf  boxCm.urdf  boxCmm.urdf  boxCx.urdf  boxX.urdf  cup.urdf  cylinderA.urdf  floor.urdf  generate_square_cup.py  large_floor.urdf  particle.urdf  realsense.urdf  region.urdf  region_big.urdf  region_drawer.urdf  region_shelf.urdf  region_small.urdf  region_table1.urdf  region_table2.urdf  square_cup.urdf  square_cup_big.urdf
Darias/scenario_description/manipulation_worlds/: CMakeLists.txt  package.xml
Darias/scenario_description/manipulation_worlds/urdf/: cabinet_door.urdf  cabinet_shelf.urdf  candy_container.urdf  drawer_shelf.urdf  pegboard.urdf  upright_cup.urdf
PR2/TASK_cook/: build_scenario.py  exe_plan.pk  instantiated_actions.pk  output.sas  result_vnts.csv  run_branch.py  run_eTAMP.py  run_eTAMP_block.py  run_eTAMP_block0.py  tree_nodes.pk
PR2/TASK_hanoi3/: build_scenario.py  exe_plan.pk  instantiated_actions.pk  run_branch.py  run_eTAMP.py  run_eTAMP_block.py  test_streams.py  (+2 more)
docs/: Grouped error bar chart.py  plot_result.py  test_data.csv
etamp/: actions.py  algorithm.py  block_skeleton.py  connect_topk.py  constraint_graph.py  decision_sampler.py  env_sk_branch.py  env_sk_branch_multi.py  env_sk_branch_prod.py  instantiated_actions.pk  instantiation.py  output.sas  p_uct2.py  progressive3.py  stream.py  topk_skeleton.py  tree_node2.py
symk/: A_ap_domain.pddl  A_ap_problem.pddl  domain.pddl  domain_kuka.pddl  domain_pps.pddl  fast-downward.py  instantiated_actions.pk  main.py  problem_kuka.pddl  problem_pps.pddl  rdomain_0.pddl  rproblem_0.pddl  toy_domain.pddl  try.py
(+285 files in other folders)
